syntax = "proto3";

option csharp_namespace = "AllyService";
import "google/api/annotations.proto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/greeter/{name}"
    };
  }
  // Sends a greeting via the Greeter gRPC client
  rpc InvokeHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/invoke/{name}"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
